# hsrb_robot

hsrb_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
hsrb_bringup/config/: controllers.yaml  diagnostic_aggregator.yaml  dynpick.yaml  hand_camera.yaml  head_center_camera.yaml  power_ecu.yaml  pseudo_endeffector_controller_config.yaml  pseudo_velocity_controller_config.yaml  urg.yaml
hsrb_bringup/launch/: controllers.py  diagnostics.launch.py  hsr_base.py  monitor.launch.py  power_ecu.py  robot.launch.py  teleop.py
hsrb_bringup/launch/sensors/: dynpick.py  frames.py  urg.py  usb_camera.py  xtion.py
